# imageeditor

./: .gitignore  Cargo.toml  LICENSE  README.md  deb_imageeditor.sh  package.sh  run_imageeditor.sh
.github/workflows/: rust.yml
content/shaders/: rectangle.fs  rectangle.vs  sample.fs  solid_rectangle.fs  solid_rectangle.vs  text.fs  text.vs  texture.fs  texture.vs
src/: command_buffer.rs  content.rs  glfw_app.rs  gtk_app.rs  helpers.rs  main.rs  program.rs
src/editor/: editor.rs  image.rs  image_operation.rs  image_operation_helpers.rs  mod.rs
src/editor/draw_tools/: bucket_fill.rs  circle.rs  effect.rs  line.rs  mod.rs  move_pixels.rs  pencil.rs  rectangle.rs  selection.rs
src/editor/tools/: block_pencil.rs  bucket_fill.rs  circle.rs  color_gradient.rs  color_picker.rs  color_wheel.rs  effect.rs  eraser.rs  line.rs  mod.rs  move_pixels.rs  pencil.rs  rectangle.rs  selection.rs
src/gtk_app/: app.rs  color_select_dialog.rs  helpers.rs  input_support.rs  menu.rs  mod.rs
src/rendering/: font.rs  framebuffer.rs  helpers.rs  mod.rs  prelude.rs  rectangle_render.rs  shader.rs  solid_rectangle_render.rs  text_render.rs  texture.rs  texture_render.rs
src/ui/: button.rs  color_wheel.rs  layers.rs  layout.rs  manager.rs  mod.rs
