[package]
name = "imageeditor"
version = "0.1.1"
authors = ["Anton Jansson <anton_jansson@live.se>"]
edition = "2018"
description = "Simple ImageEditor"
license = "MIT"
homepage = "https://github.com/svenslaggare/imageeditor"

[package.metadata.deb]
depends = "libgtk-3-0,libfreetype6,libglfw3"
assets = [
    ["target/release/imageeditor", "usr/local/imageeditor/imageeditor", "755"],
    ["deb_imageeditor.sh", "usr/bin/imageeditor", "755"],
    ["content/**/*", "usr/local/imageeditor/content", "644"],
]

[dependencies]
glfw = "0.35.0"
gl = "0.14.0"
cgmath = "0.17.0"
freetype-rs = { git = "https://github.com/PistonDevelopers/freetype-rs" }

image = "0.22.4"
bytebuffer = "0.2.1"

itertools = "0.8.2"

gtk = "0.14.3"
gl_loader = "0.1.2"

lazy_static = "1.4.0"